--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,10 +15,17 @@
                     <h3>Don't Know What To Do!</h3>
                 </ion-item>
             </ion-list>
-            <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" class="menu">
+            <div *ngIf="user">
+                <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" class="menu">
+                    <ion-icon name="{{ p.icon }}"></ion-icon>
+                    {{p.title}}
+                </button>
+            </div>
 
-              <ion-icon name="{{ p.icon }}"></ion-icon>
-              {{p.title}}
+            <button menuClose ion-item (click)="logout()" class="menu">
+
+              <ion-icon name="{{ car}}"></ion-icon>
+              LOGOUT
             </button>
         </ion-list>
     </ion-content>
