--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,3 +1,8 @@
 page-register {
-
+    ion-spinner * {
+        width: 30px;
+        height: 30px;
+        stroke: #444;
+        fill: #222;
+    }
 }
