--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,7 +12,8 @@
                         <img src="../assets/img/lunar.jpg">
                     </ion-avatar>-->
                     <h2>Name : {{ user?.name }}</h2>
-                    <h3>Phone : {{ user?.phone }}</h3>
+                    <h3 *ngIf="user?.phone">Phone : {{ user.phone }}</h3>
+                    <h3 *ngIf="!user?.phone">Phone : Not provided</h3>
                 </ion-item>
             </ion-list>
             <button menuClose ion-item (click)="openHome()" class="menu">
